--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,20 +1,17 @@
 <div id=n>
   <h2>Новинки</h2><DL>
-  <DT>12 фев: <DD><a href="/catalog/cat115.shtml" title="Строительные ленты"><span class="title">Скотч</span></a> <a href="/catalog/cat588.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">малярный</span></a> и <a href="/catalog/cat550.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">строительный</span></a><br>
+  <DT>18 фев: <DD><a href="/catalog/cat109.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Маркеры промышл.</span><span class="dop"> EDDING</span></a><br>
+  <DT>15 фев: <DD><a href="/catalog/cat101.shtml" title="Цены снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали РС</span></a><br>
+  <DT>14 фев: <DD><a href="/catalog/cat301.shtml" title="Цены снижены на многие позиции и расширен ассортимент"><span class="title">Строительные уровни</span><span class="dop"></span></a><br>
+  <DT>14 фев: <DD><a href="/catalog/cat617.shtml" title="Значительно снижены цены на некоторые позиции"><span class="title">Наборы ключей имбусовых</span><span class="dop"></span></a><br>
+  <DT>13 фев: <DD><a href="/catalog/cat433.shtml" title="Новые товары"><span class="title">Диспенсеы для скотча</span><span class="dop"></span></a><br>
+  <DT>13 фев: <DD><a href="/catalog/cat28.shtml"  title="Цены снижены на многие позиции"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
+  <DT>12 фев: <DD><a href="/catalog/cat115.shtml" title="Строительные ленты"><span class="title">Скотч</span></a> <a href="/catalog/cat588.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">малярный</span></a>/<a href="/catalog/cat550.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">строительный</span></a><br>
   <DT>28 янв: <DD><a href="/catalog/cat54.shtml"  title="Расширен ассортимент"><span class="title">Профи валики</span><span class="dop"> поролон/флок</span></a><br>
   <DT>22 янв: <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
   <DT>21 янв: <DD><a href="/catalog/cat244.shtml" title="Цены снижены"><span class="title">Штангенциркули металлические</span><span class="dop"></span></a><br>
   <DT>15 янв: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на многие позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
   <DT>14 янв: <DD><a href="/catalog/cat84.shtml"  title="Цены снижены"><span class="title">Ключи трубные КТР</span><span class="dop"> (газовые)</span></a><br>
-  <DT>10 янв: <DD><a href="/catalog/cat617.shtml" title="Расширен ассортимент"><span class="title">Наборы имбусовых ключей</span></a><br>
-  <DT>12 дек: <DD><a href="/catalog/cat579.shtml" title="Цены снижены и ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Тенты защитные</span><span class="dop"> HARDY</span></a><br>
-  <DT>05 дек: <DD><a href="/catalog/cat46.shtml"  title="Буры и свёрла"><span class="title">Буры SDS+</span></a> <a href="/catalog/cat414.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">HAGWERT</span></a>, <a href="/catalog/cat468.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">OPTIM</span></a><br>
-  <DT>28 ноя: <DD><a href="/catalog/cat285.shtml" title="Новые товары"><span class="title">Электророзетки</span><span class="dop"></span></a><br>
-  <DT>15 ноя: <DD><a href="/catalog/cat101.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали РС</span></a><br>
-  <DT>12 ноя: <DD><a href="/catalog/cat305.shtml" title="Новый товар"><span class="title">Грунт</span><span class="dop"> ГФ-021</span></a><br>
-  <DT>08 ноя: <DD><a href="/catalog/cat18.shtml"  title="Цены снижены"><span class="title">Саморезы по дереву</span><span class="dop"></span></a><br>
-  <DT>06 ноя: <DD><a href="/catalog/cat510.shtml" title="Расширен ассортимент"><span class="title">Гладилки закругленные</span><span class="dop"> &laquo;Stucco&raquo;</span></a><br>
-  <DT>05 ноя: <DD><a href="/catalog/cat376.shtml" title="Новые товары"><span class="title">Обогреватели масляные</span><span class="dop"> ZANUSSI</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
