--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,12 @@
+<DT>10 янв: <DD><a href="/catalog/cat617.shtml" title="Расширен ассортимент"><span class="title">Наборы имбусовых ключей</span></a><br>
+<DT>12 дек: <DD><a href="/catalog/cat579.shtml" title="Цены снижены и ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Тенты защитные</span><span class="dop"> HARDY</span></a><br>
+<DT>05 дек: <DD><a href="/catalog/cat46.shtml"  title="Буры и свёрла"><span class="title">Буры SDS+</span></a> <a href="/catalog/cat414.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">HAGWERT</span></a>, <a href="/catalog/cat468.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">OPTIM</span></a><br>
+<DT>28 ноя: <DD><a href="/catalog/cat285.shtml" title="Новые товары"><span class="title">Электророзетки</span><span class="dop"></span></a><br>
+<DT>15 ноя: <DD><a href="/catalog/cat101.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали РС</span></a><br>
+<DT>12 ноя: <DD><a href="/catalog/cat305.shtml" title="Новый товар"><span class="title">Грунт</span><span class="dop"> ГФ-021</span></a><br>
+<DT>08 ноя: <DD><a href="/catalog/cat18.shtml"  title="Цены снижены"><span class="title">Саморезы по дереву</span><span class="dop"></span></a><br>
+<DT>06 ноя: <DD><a href="/catalog/cat510.shtml" title="Расширен ассортимент"><span class="title">Гладилки закругленные</span><span class="dop"> &laquo;Stucco&raquo;</span></a><br>
+<DT>05 ноя: <DD><a href="/catalog/cat376.shtml" title="Новые товары"><span class="title">Обогреватели масляные</span><span class="dop"> ZANUSSI</span></a><br>
 <DT>31 окт: <DD><a href="/catalog/cat72.shtml"  title="Новые товары"><span class="title">Строительные рулетки</span><span class="dop"> EFFECTA</span></a><br>
 <DT>29 окт: <DD><a href="/catalog/cat24.shtml"  title="Новый товар: Круг отрезной по металлу пр-ва Лужского Абразивного завода&#xa;125 х 1.2 х 22 мм PREMIUM"><span class="title">Круг отрезной Луга</span><span class="dop"> PREMIUM</span></a><br>
 <DT>15 окт: <DD><a href="/catalog/cat188.shtml" title="Расширен ассортимент"><span class="title">Степлеры скобозабивные</span><span class="dop"> MiLES</span></a><br>
