--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>21 фев: <DD><a href="/catalog/cat559.shtml" title="Расширен ассортимент"><span class="title">Малярные валики</span><span class="dop"> Torino</span></a><br>
   <DT>18 фев: <DD><a href="/catalog/cat109.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Маркеры промышл.</span><span class="dop"> EDDING</span></a><br>
   <DT>15 фев: <DD><a href="/catalog/cat101.shtml" title="Цены снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали РС</span></a><br>
   <DT>14 фев: <DD><a href="/catalog/cat301.shtml" title="Цены снижены на многие позиции и расширен ассортимент"><span class="title">Строительные уровни</span><span class="dop"></span></a><br>
@@ -10,8 +11,6 @@
   <DT>28 янв: <DD><a href="/catalog/cat54.shtml"  title="Расширен ассортимент"><span class="title">Профи валики</span><span class="dop"> поролон/флок</span></a><br>
   <DT>22 янв: <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
   <DT>21 янв: <DD><a href="/catalog/cat244.shtml" title="Цены снижены"><span class="title">Штангенциркули металлические</span><span class="dop"></span></a><br>
-  <DT>15 янв: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на многие позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
-  <DT>14 янв: <DD><a href="/catalog/cat84.shtml"  title="Цены снижены"><span class="title">Ключи трубные КТР</span><span class="dop"> (газовые)</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
@@ -64,12 +63,12 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/shmal/big/5110-10.jpg" title="Большое фото: Валики Roma 18 (HARDY, Польша)"><img src="/img/pic/shmal/small/5110-10.jpg" width="98"></a>
+        href="/img/pic/shmal/big/5110-2248.jpg" title="Большое фото: Валики Torino 18 (HARDY, Польша)"><img src="/img/pic/shmal/small/5110-2248.jpg" width="98"></a>
     </td>
       <td class="good-txt"><a href="/catalog/cat559.shtml"
-        title="Валики Roma 18 (HARDY, Польша) на нашем сайте">
+        title="Валики Torino 18 (HARDY, Польша) на нашем сайте">
         <p>
-          <span class="title">Валики Roma 18 (HARDY, Польша)</span><span class="dop"><br>для красок на водной основе</span>
+          <span class="title">Валики Torino,<br>&empty; 44 / 8 мм,<br>ворс 18 мм<br>(HARDY, Польша)</span><span class="dop"></span><br>из смеси полиакрила<br>и полиэстера
         </p></a>
   </table>
   <table class="one-good" cellpadding="0">
