--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,5 @@
+<DT>15 янв: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на многие позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
+<DT>14 янв: <DD><a href="/catalog/cat84.shtml"  title="Цены снижены"><span class="title">Ключи трубные КТР</span><span class="dop"> (газовые)</span></a><br>
 <DT>10 янв: <DD><a href="/catalog/cat617.shtml" title="Расширен ассортимент"><span class="title">Наборы имбусовых ключей</span></a><br>
 <DT>12 дек: <DD><a href="/catalog/cat579.shtml" title="Цены снижены и ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Тенты защитные</span><span class="dop"> HARDY</span></a><br>
 <DT>05 дек: <DD><a href="/catalog/cat46.shtml"  title="Буры и свёрла"><span class="title">Буры SDS+</span></a> <a href="/catalog/cat414.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">HAGWERT</span></a>, <a href="/catalog/cat468.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">OPTIM</span></a><br>
@@ -672,4 +674,15 @@
         class="title">Лента малярная синяя</span><span
         class="dop"><br>"Scley" (Польша)</span><span
         class="addt">,<br>особо устойчивая к разрывам тисненая бумажная лента</span></p></a>
+  </table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/shmal/big/5110-10.jpg" title="Большое фото: Валики Roma 18 (HARDY, Польша)"><img src="/img/pic/shmal/small/5110-10.jpg" width="98"></a>
+      </td>
+      <td class="good-txt"><a href="/catalog/cat559.shtml"
+        title="Валики Roma 18 (HARDY, Польша) на нашем сайте">
+        <p>
+          <span class="title">Валики Roma 18 (HARDY, Польша)</span><span class="dop"><br>для красок на водной основе</span>
+        </p></a>
   </table>
