--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>01 мар: <DD><a href="/catalog/cat179.shtml" title="Новый товар"><span class="title">Газовый резак</span><span class="dop"> Р3П «Сталь»</span></a><br>
   <DT>21 фев: <DD><a href="/catalog/cat559.shtml" title="Расширен ассортимент"><span class="title">Малярные валики</span><span class="dop"> Torino</span></a><br>
   <DT>18 фев: <DD><a href="/catalog/cat109.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Маркеры промышл.</span><span class="dop"> EDDING</span></a><br>
   <DT>15 фев: <DD><a href="/catalog/cat101.shtml" title="Цены снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали РС</span></a><br>
