--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>13 мар: <DD><a href="/catalog/cat505.shtml" title="Новый товар"><span class="title">Смазка Multi Spray</span><span class="dop"> (SOUDAL)</span></a><br>
+  <DT>12 мар: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Рулетки геодезические</span><span class="dop"></span></a><br>
+  <DT>07 мар: <DD><a href="/catalog/cat103.shtml" title="Новый товар"><span class="title">Шланг поливочный 50 м</span><span class="dop"> Дачник</span></a><br>
   <DT>01 мар: <DD><a href="/catalog/cat179.shtml" title="Новый товар"><span class="title">Газовый резак</span><span class="dop"> Р3П «Сталь»</span></a><br>
   <DT>21 фев: <DD><a href="/catalog/cat559.shtml" title="Расширен ассортимент"><span class="title">Малярные валики</span><span class="dop"> Torino</span></a><br>
   <DT>18 фев: <DD><a href="/catalog/cat109.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Маркеры промышл.</span><span class="dop"> EDDING</span></a><br>
@@ -9,9 +12,6 @@
   <DT>13 фев: <DD><a href="/catalog/cat433.shtml" title="Новые товары"><span class="title">Диспенсеы для скотча</span><span class="dop"></span></a><br>
   <DT>13 фев: <DD><a href="/catalog/cat28.shtml"  title="Цены снижены на многие позиции"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
   <DT>12 фев: <DD><a href="/catalog/cat115.shtml" title="Строительные ленты"><span class="title">Скотч</span></a> <a href="/catalog/cat588.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">малярный</span></a>/<a href="/catalog/cat550.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">строительный</span></a><br>
-  <DT>28 янв: <DD><a href="/catalog/cat54.shtml"  title="Расширен ассортимент"><span class="title">Профи валики</span><span class="dop"> поролон/флок</span></a><br>
-  <DT>22 янв: <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
-  <DT>21 янв: <DD><a href="/catalog/cat244.shtml" title="Цены снижены"><span class="title">Штангенциркули металлические</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
