--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,6 @@
+<DT>28 янв: <DD><a href="/catalog/cat54.shtml"  title="Расширен ассортимент"><span class="title">Профи валики</span><span class="dop"> поролон/флок</span></a><br>
+<DT>22 янв: <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+<DT>21 янв: <DD><a href="/catalog/cat244.shtml" title="Цены снижены"><span class="title">Штангенциркули металлические</span><span class="dop"></span></a><br>
 <DT>15 янв: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на многие позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
 <DT>14 янв: <DD><a href="/catalog/cat84.shtml"  title="Цены снижены"><span class="title">Ключи трубные КТР</span><span class="dop"> (газовые)</span></a><br>
 <DT>10 янв: <DD><a href="/catalog/cat617.shtml" title="Расширен ассортимент"><span class="title">Наборы имбусовых ключей</span></a><br>
