--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>18 мар: <DD><a href="/catalog/cat512.shtml" title="Новые товары"><span class="title">Мастерки (кельмы) угловые</span><span class="dop"></span></a><br>
   <DT>13 мар: <DD><a href="/catalog/cat505.shtml" title="Новый товар"><span class="title">Смазка Multi Spray</span><span class="dop"> (SOUDAL)</span></a><br>
   <DT>12 мар: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Рулетки геодезические</span><span class="dop"></span></a><br>
   <DT>07 мар: <DD><a href="/catalog/cat103.shtml" title="Новый товар"><span class="title">Шланг поливочный 50 м</span><span class="dop"> Дачник</span></a><br>
@@ -9,7 +10,7 @@
   <DT>15 фев: <DD><a href="/catalog/cat101.shtml" title="Цены снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали РС</span></a><br>
   <DT>14 фев: <DD><a href="/catalog/cat301.shtml" title="Цены снижены на многие позиции и расширен ассортимент"><span class="title">Строительные уровни</span><span class="dop"></span></a><br>
   <DT>14 фев: <DD><a href="/catalog/cat617.shtml" title="Значительно снижены цены на некоторые позиции"><span class="title">Наборы ключей имбусовых</span><span class="dop"></span></a><br>
-  <DT>13 фев: <DD><a href="/catalog/cat433.shtml" title="Новые товары"><span class="title">Диспенсеы для скотча</span><span class="dop"></span></a><br>
+  <DT>13 фев: <DD><a href="/catalog/cat433.shtml" title="Новые товары"><span class="title">Диспенсеры для скотча</span><span class="dop"></span></a><br>
   <DT>13 фев: <DD><a href="/catalog/cat28.shtml"  title="Цены снижены на многие позиции"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
   <DT>12 фев: <DD><a href="/catalog/cat115.shtml" title="Строительные ленты"><span class="title">Скотч</span></a> <a href="/catalog/cat588.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">малярный</span></a>/<a href="/catalog/cat550.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">строительный</span></a><br>
 </DL><!-- >=====================< -->
