--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,7 @@
+<DT>14 фев: <DD><a href="/catalog/cat617.shtml" title="Значительно снижены цены на некоторые позиции"><span class="title">Наборы ключей имбусовых</span><span class="dop"></span></a><br>
+<DT>13 фев: <DD><a href="/catalog/cat433.shtml" title="Новые товары"><span class="title">Диспенсеры для скотча</span><span class="dop"></span></a><br>
+<DT>13 фев: <DD><a href="/catalog/cat28.shtml"  title="Цены снижены на многие позиции"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
+<DT>12 фев: <DD><a href="/catalog/cat115.shtml" title="Строительные ленты"><span class="title">Скотч</span></a> <a href="/catalog/cat588.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">малярный</span></a>/<a href="/catalog/cat550.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">строительный</span></a><br>
 <DT>28 янв: <DD><a href="/catalog/cat54.shtml"  title="Расширен ассортимент"><span class="title">Профи валики</span><span class="dop"> поролон/флок</span></a><br>
 <DT>22 янв: <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
 <DT>21 янв: <DD><a href="/catalog/cat244.shtml" title="Цены снижены"><span class="title">Штангенциркули металлические</span><span class="dop"></span></a><br>
