Many + 13. cat47 BERGEN restored till 83 pos

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>19 апр: <DD><a href="/catalog/cat520.shtml" title="Расширен ассортимент"><span class="title">Валики сменные Нейлон</span><span class="dop"> ProLine</span></a><br>
   <DT>12 апр: <DD><a href="/catalog/cat183.shtml" title="Расширен ассортимент"><span class="title">Щетки для УШМ</span><span class="dop"> торцевые</span></a><br>
   <DT>12 апр: <DD><a href="/catalog/cat516.shtml" title="Новый товар"><span class="title">Кювета для валиков</span><span class="dop"> 270х290мм</span></a><br>
   <DT>27 мар: <DD><a href="/catalog/cat72.shtml"  title="Цена ЗНАЧИТЕЛЬНО снижена"><span class="title">Рулетка</span><span class="dop"> EFFECTA "Basic" 5 м</span></a><br>
@@ -49,40 +50,5 @@
         title="Круги отрезные по металлу (Луга) на нашем сайте"><p>
         <span class="title">Круги отрезные по&nbsp;металлу</span><span class="dop"><br>(пр-во Лужского Абразивного Завода)</span><span class="addt">,<br>разные размеры</span>
       </p></a>
-  </table>
-  <table class="one-good" cellpadding="0">
-    <tr valign="top">
-      <td align="center" width=1>
-        <a class="cboxElement" href="/img/pic/shmal/big/0201-545750n.jpg" title="Большое фото: Кисть плоская ПРОФИ 70 мм (HARDY, Польша)"><img src="/img/pic/shmal/small/0201-545750n.jpg" width="98"></a>
-      </td>
-      <td class="good-txt"><a href="/catalog/cat569.shtml"
-        title="Кисть плоская ПРОФИ 70 мм (HARDY, Польша) на нашем сайте">
-        <p>
-          <span class="title">Кисти плоские с. 54 ПРОФИ, 30 - 100 мм</span><span class="dop"><br>(HARDY, Польша)</span>
-          <span class="addt"><br>Для красок и лаков на основе растворителей</span>
-        </p></a>
-  </table>
-  <table class="one-good" cellpadding="0">
-    <tr valign="top">
-      <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/shmal/big/5110-2248.jpg" title="Большое фото: Валики Torino 18 (HARDY, Польша)"><img src="/img/pic/shmal/small/5110-2248.jpg" width="98"></a>
-    </td>
-      <td class="good-txt"><a href="/catalog/cat559.shtml"
-        title="Валики Torino 18 (HARDY, Польша) на нашем сайте">
-        <p>
-          <span class="title">Валики Torino,<br>&empty; 44 / 8 мм,<br>ворс 18 мм<br>(HARDY, Польша)</span><span class="dop"></span><br>из смеси полиакрила<br>и полиэстера
-        </p></a>
-  </table>
-  <table class="one-good" cellpadding="0">
-    <tr valign="top">
-      <td align="center" width=1>
-        <a class="cboxElement" href="/img/pic/equip/big/0440-840305.jpg" title="Большое фото: Тенты защитные HARDY (Польша)"><img src="/img/pic/equip/small/0440-840305.jpg" width="98"></a>
-      </td>
-      <td class="good-txt"><a href="/catalog/cat579.shtml"
-        title="Тенты защитные HARDY (Польша) на нашем сайте">
-        <p>
-          <span class="title">Тенты защитные</span><span class="dop"><br>HARDY (Польша)</span>
-          <span class="addt"><br>4х5 и 6х8 м, 140г/кв.м.<br>Практичные, лёгкие, удобные,<br>с металлическими кольцами.</span>
-        </p></a>
   </table>
 </div>
