--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,5 @@
+<div id=n>
+  <h2>Новинки</h2><DL>
 <DT>14 фев: <DD><a href="/catalog/cat617.shtml" title="Значительно снижены цены на некоторые позиции"><span class="title">Наборы ключей имбусовых</span><span class="dop"></span></a><br>
 <DT>13 фев: <DD><a href="/catalog/cat433.shtml" title="Новые товары"><span class="title">Диспенсеры для скотча</span><span class="dop"></span></a><br>
 <DT>13 фев: <DD><a href="/catalog/cat28.shtml"  title="Цены снижены на многие позиции"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
@@ -8,6 +10,7 @@
 <DT>15 янв: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на многие позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
 <DT>14 янв: <DD><a href="/catalog/cat84.shtml"  title="Цены снижены"><span class="title">Ключи трубные КТР</span><span class="dop"> (газовые)</span></a><br>
 <DT>10 янв: <DD><a href="/catalog/cat617.shtml" title="Расширен ассортимент"><span class="title">Наборы имбусовых ключей</span></a><br>
+  <!-- ^ 2019 ^ -->
 <DT>12 дек: <DD><a href="/catalog/cat579.shtml" title="Цены снижены и ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Тенты защитные</span><span class="dop"> HARDY</span></a><br>
 <DT>05 дек: <DD><a href="/catalog/cat46.shtml"  title="Буры и свёрла"><span class="title">Буры SDS+</span></a> <a href="/catalog/cat414.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">HAGWERT</span></a>, <a href="/catalog/cat468.shtml"  title="Значительно снижены цены на некоторые позиции"><span class="dop">OPTIM</span></a><br>
 <DT>28 ноя: <DD><a href="/catalog/cat285.shtml" title="Новые товары"><span class="title">Электророзетки</span><span class="dop"></span></a><br>
@@ -70,6 +73,7 @@
 <DT>01 фев: <DD><a href="/catalog/cat87.shtml"  title="Новый товар"><span class="title">Перчатки с покрытием</span><span class="dop"> NITRAS</span></a><br>
 <DT>15 янв: <DD><a href="/catalog/cat269.shtml" title="Новые товары"><span class="title">Торцевые головки</span></a> <a href="/catalog/cat262.shtml" title="Наборы торцевых головок: Расширен ассортимент"><span class="dop">OMBRA</span></a><br>
 <DT>15 янв: <DD><a href="/catalog/cat265.shtml" title="Новые товары"><span class="title">Трещотки</span><span class="dop"> THORVIK, JONNESWAY</span></a><br>
+  <!-- ^ 2018 ^ -->
 <DT>25 дек: <DD><a href="/catalog/cat519.shtml" title="Значительно расширен ассортимент"><span class="title">Фасадные валики</span><span class="dop"> MaxProfi</span></a><br>
 <DT>25 дек: <DD><a href="/catalog/cat153.shtml" title="Новые товары"><span class="title">Кельмы угловые</span><span class="dop"> HARDY</span></a><br>
 <DT>22 дек: <DD><a href="/catalog/cat521.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Распродажа валиков</span><span class="dop"> Eurofaza!!!</span></a><br>
@@ -186,6 +190,7 @@
 <DT>17 янв: <DD><a href="/catalog/cat376.shtml" title="Расширен ассортимент"><span class="title">Масляные радиаторы</span><span class="dop"> OFR</span></a><br>
 <DT>16 янв: <DD><a href="/catalog/cat175.shtml" title="Цена снижена"><span class="title">Пена монтажная</span><span class="dop"> Profpur Ice</span></a><br>
 <DT>16 янв: <DD><a href="/catalog/cat191.shtml" title="Новый товар"><span class="title">Пистолет для пены</span><span class="dop"> Сибртех</span></a><br>
+  <!-- ^ 2017 ^ -->
 <DT>12 дек: <DD><a href="/catalog/cat190.shtml" title="Новые товары"><span class="title">Прожекторы светодиодные</span><span class="dop"> ULF</span></a><br>
 <DT>09 дек: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Пена монтажная</span><span class="dop"> Profpur Extra</span></a><br>
 <DT>08 дек: <DD><a href="/catalog/cat189.shtml" title="Расширен ассортимент"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
@@ -634,6 +639,7 @@
 <DT>13 апр.: <DD><a href="/catalog/cat114.shtml" title="Расширен ассортимент"><span class="title">Лента сигнальная</span><span class="dop"> кр.-белая</span></a><br>
   <!-- ^ 2012 ^ -->
 </DL><!-- >=====================< -->
+</div><div id=r1>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
@@ -693,3 +699,39 @@
           <span class="title">Валики Roma 18 (HARDY, Польша)</span><span class="dop"><br>для красок на водной основе</span>
         </p></a>
   </table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1>
+        <a class="cboxElement" href="/img/pic/shmal/big/0201-545750n.jpg" title="Большое фото: Кисть плоская ПРОФИ 70 мм (HARDY, Польша)"><img src="/img/pic/shmal/small/0201-545750n.jpg" width="98"></a>
+      </td>
+      <td class="good-txt"><a href="/catalog/cat569.shtml"
+        title="Кисть плоская ПРОФИ 70 мм (HARDY, Польша) на нашем сайте">
+        <p>
+          <span class="title">Кисти плоские с. 54 ПРОФИ, 30 - 100 мм</span><span class="dop"><br>(HARDY, Польша)</span>
+          <span class="addt"><br>Для красок и лаков на основе растворителей</span>
+        </p></a>
+  </table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/shmal/big/5110-2248.jpg" title="Большое фото: Валики Torino 18 (HARDY, Польша)"><img src="/img/pic/shmal/small/5110-2248.jpg" width="98"></a>
+      </td>
+      <td class="good-txt"><a href="/catalog/cat559.shtml"
+        title="Валики Torino 18 (HARDY, Польша) на нашем сайте">
+        <p>
+          <span class="title">Валики Torino,<br>&empty; 44 / 8 мм,<br>ворс 18 мм<br>(HARDY, Польша)</span><span class="dop"></span><br>из смеси полиакрила<br>и полиэстера
+        </p></a>
+  </table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1>
+        <a class="cboxElement" href="/img/pic/equip/big/0440-840305.jpg" title="Большое фото: Тенты защитные HARDY (Польша)"><img src="/img/pic/equip/small/0440-840305.jpg" width="98"></a>
+      </td>
+      <td class="good-txt"><a href="/catalog/cat579.shtml"
+        title="Тенты защитные HARDY (Польша) на нашем сайте">
+        <p>
+          <span class="title">Тенты защитные</span><span class="dop"><br>HARDY (Польша)</span>
+          <span class="addt"><br>4х5 и 6х8 м, 140г/кв.м.<br>Практичные, лёгкие, удобные,<br>с металлическими кольцами.</span>
+        </p></a>
+  </table>
+</div>
