--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>26 апр: <DD><a href="/catalog/cat107.shtml" title="Снижены цены на некоторые позиции"><span class="title">Лезвия для строительных ножей</span><span class="dop"></span></a><br>
   <DT>19 апр: <DD><a href="/catalog/cat520.shtml" title="Расширен ассортимент"><span class="title">Валики сменные Нейлон</span><span class="dop"> ProLine</span></a><br>
   <DT>12 апр: <DD><a href="/catalog/cat183.shtml" title="Расширен ассортимент"><span class="title">Щетки для УШМ</span><span class="dop"> торцевые</span></a><br>
   <DT>12 апр: <DD><a href="/catalog/cat516.shtml" title="Новый товар"><span class="title">Кювета для валиков</span><span class="dop"> 270х290мм</span></a><br>
@@ -10,10 +11,6 @@
   <DT>12 мар: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Рулетки геодезические</span><span class="dop"></span></a><br>
   <DT>07 мар: <DD><a href="/catalog/cat103.shtml" title="Новый товар"><span class="title">Шланг поливочный 50 м</span><span class="dop"> Дачник</span></a><br>
   <DT>01 мар: <DD><a href="/catalog/cat179.shtml" title="Новый товар"><span class="title">Газовый резак</span><span class="dop"> Р3П «Сталь»</span></a><br>
-  <DT>21 фев: <DD><a href="/catalog/cat559.shtml" title="Расширен ассортимент"><span class="title">Малярные валики</span><span class="dop"> Torino</span></a><br>
-  <DT>18 фев: <DD><a href="/catalog/cat109.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Маркеры промышл.</span><span class="dop"> EDDING</span></a><br>
-  <DT>15 фев: <DD><a href="/catalog/cat101.shtml" title="Цены снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали РС</span></a><br>
-  <DT>14 фев: <DD><a href="/catalog/cat301.shtml" title="Цены снижены на многие позиции и расширен ассортимент"><span class="title">Строительные уровни</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
@@ -51,4 +48,14 @@
         <span class="title">Круги отрезные по&nbsp;металлу</span><span class="dop"><br>(пр-во Лужского Абразивного Завода)</span><span class="addt">,<br>разные размеры</span>
       </p></a>
   </table>
+  <table class="one-good" cellpadding="0">
+  <tr valign="top">
+    <td align="center" width=1><a class="cboxElement"
+      href="/img/pic/strhoz/big/19-0-210.jpg"><img src="/img/pic/strhoz/small/19-0-210.jpg" width="98"
+      title="Большое фото: Нож 18 мм с выдвижным лезвием 'Модерн' "></a></td>
+    <td class="good-txt"><a href="/catalog/cat107.shtml"
+      title="Нож 18 мм с выдвижным лезвием 'Модерн' на нашем сайте"><p>
+      <span class="title">Профессиональный строительный нож </span> <span class="dop">"Модерн"</span><span class="addt">, 18&#8239;мм, выдвижное лезвие, винтовой фиксатор, сталь 60Г</span>
+    </p></a>
+</table>
 </div>
