--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,9 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>21 фев: <DD><a href="/catalog/cat559.shtml" title="Расширен ассортимент"><span class="title">Малярные валики</span><span class="dop"> Torino</span></a><br>
+  <DT>18 фев: <DD><a href="/catalog/cat109.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Маркеры промышл.</span><span class="dop"> EDDING</span></a><br>
+  <DT>15 фев: <DD><a href="/catalog/cat101.shtml" title="Цены снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали РС</span></a><br>
+  <DT>14 фев: <DD><a href="/catalog/cat301.shtml" title="Цены снижены на многие позиции и расширен ассортимент"><span class="title">Строительные уровни</span><span class="dop"></span></a><br>
 <DT>14 фев: <DD><a href="/catalog/cat617.shtml" title="Значительно снижены цены на некоторые позиции"><span class="title">Наборы ключей имбусовых</span><span class="dop"></span></a><br>
 <DT>13 фев: <DD><a href="/catalog/cat433.shtml" title="Новые товары"><span class="title">Диспенсеры для скотча</span><span class="dop"></span></a><br>
 <DT>13 фев: <DD><a href="/catalog/cat28.shtml"  title="Цены снижены на многие позиции"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
