--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>03 мая: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на некоторые позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
   <DT>29 апр: <DD><a href="/catalog/cat28.shtml"  title="ЗНАЧИТЕЛЬНО снижены цены на некоторые позиции"><span class="title">Алмазные диски</span><span class="dop"> HAGWERT</span></a><br>
   <DT>26 апр: <DD><a href="/catalog/cat107.shtml" title="Снижены цены на некоторые позиции"><span class="title">Лезвия для строительных ножей</span><span class="dop"></span></a><br>
   <DT>19 апр: <DD><a href="/catalog/cat520.shtml" title="Расширен ассортимент"><span class="title">Валики сменные Нейлон</span><span class="dop"> ProLine</span></a><br>
