--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>15 мая: <DD><a href="/catalog/cat49.shtml"  title="Расширен ассортимент"><span class="title">Зубила</span></a> и <a href="/catalog/cat211.shtml"  title="Цены снижены на некоторые позиции"><span class="title">Пики</span></a> <a href="/catalog/cat310.shtml"  title="Перфоратор SDS на нашем сайте"><span class="dop"><span style="font-size: smaller">к перфоратору </span>SDS</span></a><br>
+  <DT>15 мая: <DD><a href="/catalog/cat324.shtml" title="Снижены цены на некоторые позиции"><span class="title">Биты</span></a> <a href="/catalog/cat329.shtml"  title="Снижены цены на некоторые позиции"><span class="dop">PHILLIPS</span></a> и <a href="/catalog/cat328.shtml"  title="Снижены цены на некоторые позиции и расширен ассортимент"><span class="dop">POSIDRIV</span></a><br>
+  <DT>14 мая: <DD><a href="/catalog/cat188.shtml" title="Цена снижена"><span class="title">Степлер</span><span class="dop"> STELGRIT (тип 53)</span></a><br>
   <DT>03 мая: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на некоторые позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
   <DT>29 апр: <DD><a href="/catalog/cat28.shtml"  title="ЗНАЧИТЕЛЬНО снижены цены на некоторые позиции"><span class="title">Алмазные диски</span><span class="dop"> HAGWERT</span></a><br>
   <DT>26 апр: <DD><a href="/catalog/cat107.shtml" title="Снижены цены на некоторые позиции"><span class="title">Лезвия для строительных ножей</span><span class="dop"></span></a><br>
