--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>16 мая: <DD><a href="/catalog/cat304.shtml" title="ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Эмаль</span><span class="dop"> ПФ-115</span></a><br>
+  <DT>16 мая: <DD><a href="/catalog/cat420.shtml" title="Расширен ассортимент"><span class="title">Коронки алмазные по керамике</span><span class="dop"></span></a><br>
   <DT>15 мая: <DD><a href="/catalog/cat49.shtml"  title="Расширен ассортимент"><span class="title">Зубила</span></a> и <a href="/catalog/cat211.shtml"  title="Цены снижены на некоторые позиции"><span class="title">Пики</span></a> <a href="/catalog/cat310.shtml"  title="Перфоратор SDS на нашем сайте"><span class="dop"><span style="font-size: smaller">к перфоратору </span>SDS</span></a><br>
   <DT>15 мая: <DD><a href="/catalog/cat324.shtml" title="Снижены цены на некоторые позиции"><span class="title">Биты</span></a> <a href="/catalog/cat329.shtml"  title="Снижены цены на некоторые позиции"><span class="dop">PHILLIPS</span></a> и <a href="/catalog/cat328.shtml"  title="Снижены цены на некоторые позиции и расширен ассортимент"><span class="dop">POSIDRIV</span></a><br>
   <DT>14 мая: <DD><a href="/catalog/cat188.shtml" title="Цена снижена"><span class="title">Степлер</span><span class="dop"> STELGRIT (тип 53)</span></a><br>
@@ -9,13 +11,6 @@
   <DT>19 апр: <DD><a href="/catalog/cat520.shtml" title="Расширен ассортимент"><span class="title">Валики сменные Нейлон</span><span class="dop"> ProLine</span></a><br>
   <DT>12 апр: <DD><a href="/catalog/cat183.shtml" title="Расширен ассортимент"><span class="title">Щетки для УШМ</span><span class="dop"> торцевые</span></a><br>
   <DT>12 апр: <DD><a href="/catalog/cat516.shtml" title="Новый товар"><span class="title">Кювета для валиков</span><span class="dop"> 270х290мм</span></a><br>
-  <DT>27 мар: <DD><a href="/catalog/cat72.shtml"  title="Цена ЗНАЧИТЕЛЬНО снижена"><span class="title">Рулетка</span><span class="dop"> EFFECTA "Basic" 5 м</span></a><br>
-  <DT>25 мар: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Ножи с выдвижным лезвием</span><span class="dop"></span></a><br>
-  <DT>18 мар: <DD><a href="/catalog/cat512.shtml" title="Новые товары"><span class="title">Мастерки (кельмы) угловые</span><span class="dop"></span></a><br>
-  <DT>13 мар: <DD><a href="/catalog/cat505.shtml" title="Новый товар"><span class="title">Смазка Multi Spray</span><span class="dop"> (SOUDAL)</span></a><br>
-  <DT>12 мар: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Рулетки геодезические</span><span class="dop"></span></a><br>
-  <DT>07 мар: <DD><a href="/catalog/cat103.shtml" title="Новый товар"><span class="title">Шланг поливочный 50 м</span><span class="dop"> Дачник</span></a><br>
-  <DT>01 мар: <DD><a href="/catalog/cat179.shtml" title="Новый товар"><span class="title">Газовый резак</span><span class="dop"> Р3П «Сталь»</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
