--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,12 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 мар: <DD><a href="/catalog/cat72.shtml"  title="Цена ЗНАЧИТЕЛЬНО снижена"><span class="title">Рулетка</span><span class="dop"> EFFECTA "Basic" 5 м</span></a><br>
+  <DT>25 мар: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Ножи с выдвижным лезвием</span><span class="dop"></span></a><br>
+  <DT>18 мар: <DD><a href="/catalog/cat512.shtml" title="Новые товары"><span class="title">Мастерки (кельмы) угловые</span><span class="dop"></span></a><br>
+  <DT>13 мар: <DD><a href="/catalog/cat505.shtml" title="Новый товар"><span class="title">Смазка Multi Spray</span><span class="dop"> (SOUDAL)</span></a><br>
+  <DT>12 мар: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Рулетки геодезические</span><span class="dop"></span></a><br>
+  <DT>07 мар: <DD><a href="/catalog/cat103.shtml" title="Новый товар"><span class="title">Шланг поливочный 50 м</span><span class="dop"> Дачник</span></a><br>
+  <DT>01 мар: <DD><a href="/catalog/cat179.shtml" title="Новый товар"><span class="title">Газовый резак</span><span class="dop"> Р3П «Сталь»</span></a><br>
   <DT>21 фев: <DD><a href="/catalog/cat559.shtml" title="Расширен ассортимент"><span class="title">Малярные валики</span><span class="dop"> Torino</span></a><br>
   <DT>18 фев: <DD><a href="/catalog/cat109.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Маркеры промышл.</span><span class="dop"> EDDING</span></a><br>
   <DT>15 фев: <DD><a href="/catalog/cat101.shtml" title="Цены снижены"><span class="title">Лопаты</span><span class="dop"> из рельсовой стали РС</span></a><br>
