--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 мая: <DD><a href="/catalog/cat306.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Растворитель Р-646, Уайт-спирит</span><span class="dop"></span></a><br>
   <DT>21 мая: <DD><a href="/catalog/cat295.shtml" title="Новые товары"><span class="title">Аэрозольная эмаль <span style="font-size: smaller">универсальная</span></span><span class="dop"></span></a><br>
   <DT>20 мая: <DD><a href="/catalog/cat28.shtml"  title="ЗНАЧИТЕЛЬНО снижены цены на некоторые позиции"><span class="title">Алмазные диски</span><span class="dop"> HAGWERT</span></a><br>
   <DT>17 мая: <DD><a href="/catalog/cat304.shtml" title="ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Эмаль</span><span class="dop"> ПФ-115</span></a><br>
