Many + WD40 + Sat 3+4

--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -33,15 +33,21 @@
 ============================== Свойство "Описание"
 <p class="callprice"></p>
 <p class="onlyrest"></p>
-==============================
-  https://google.gik-team.com/?q=%D0%BF%D1%80%D0%B8%D0%BA%D0%BE%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5+%D0%BF%D0%BE%D0%B7%D0%B4%D1%80%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F+%D1%81+8+%D0%BC%D0%B0%D1%80%D1%82%D0%B0
-==============================
-Альтернативный шаблон:
+
+============================== Альтернативный шаблон:
 <table class="ref"><tr><td>{REL_CAT}</table>
 Свойства для сортировки - №№ категорий:
 {507,508,516}
 {506,23,85}
 ,506,23,85}
+============================== в Альтернативный шаблон, чтоб появилось после таблиц ========================================
+<p class="price-none">Цены и количество товара на складе узнавайте у менеджера.</p>
+<p class="price-none">К указанным на сайте ценам могут быть применены скидки.</p>
+============================== Без Цен: в Альтернативный шаблон, чтоб появилось под заголовком (место дано для .ot37) ======
+<p class="subtit price-none">О наличии товара и действующих ценах осведомляйтесь у менеджеров.</p>
+<p class="subtit price-none">Действующие цены на данные позиции узнавайте у менеджеров.</p>
+<p class="subtit price-none">Количество товара на данный день ограничено остатками на складах.</p>
+
 ============================== Инфоблоки
 Сделал настройку в модуле "Каталог товаров" - no_goods_text - она выводится, когда нет списка товаров.
 "Товар временно отсутствует в продаже"
@@ -87,20 +93,6 @@
 <span class="p3"><br><b>Крупнооптовая</b> &mdash; при сумме счета от <b>50 тысяч</b> рублей.</span></span>
 <span class="const"><br>Постоянным клиентам &mdash; особые условия.</span>
 
-============================== в Альтернативный шаблон, чтоб появилось после таблиц ========================================
-<p class="price-none">Цены и количество товара на складе узнавайте у менеджера.</p>
-<p class="price-none">К указанным на сайте ценам могут быть применены скидки.</p>
-============================== Без Цен: в Альтернативный шаблон, чтоб появилось под заголовком (место дано для .ot37) ======
-<p class="subtit price-none">О наличии товара и действующих ценах осведомляйтесь у менеджеров.</p>
-<p class="subtit price-none">Действующие цены на данные позиции узнавайте у менеджеров.</p>
-<p class="subtit price-none">Количество товара на данный день ограничено остатками на складах.</p>
-
-<a href='/catalog/cat8.shtml'>металлических сеток</a>, <a href='/catalog/cat118.shtml'>проволоки</a>,
-РАСПРОДАЖА буров
-Цена распродажи
-РАСПРОДАЖИ и АКЦИИ
-Кабельные вилки и розетки PCE (Австрия)
-Набор свёрел по металлу
 ========= # 105|Тачки строительные ========== Альтернативный шаблон =========
 <br>
 <table class="tab">
