--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>20 июн: <DD><a href="/catalog/cat33.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гайки</span><span class="dop"> ГОСТ 5915-70</span></a><br>
   <DT>10 июн: <DD><a href="/catalog/cat446.shtml" title="Новые товары"><span class="title">Смазка универсальная</span><span class="dop"> WD40</span></a><br>
   <DT>07 июн: <DD><a href="/catalog/cat403.shtml" title="Новый товар"><span class="title">Проволока вязальная</span><span class="dop"></span></a><br>
   <DT>27 мая: <DD><a href="/catalog/cat306.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Растворитель Р-646, Уайт-спирит</span><span class="dop"></span></a><br>
@@ -11,10 +12,6 @@
   <DT>15 мая: <DD><a href="/catalog/cat324.shtml" title="Снижены цены на некоторые позиции"><span class="title">Биты</span></a> <a href="/catalog/cat329.shtml"  title="Снижены цены на некоторые позиции"><span class="dop">PHILLIPS</span></a> и <a href="/catalog/cat328.shtml"  title="Снижены цены на некоторые позиции и расширен ассортимент"><span class="dop">POSIDRIV</span></a><br>
   <DT>14 мая: <DD><a href="/catalog/cat188.shtml" title="Цена снижена"><span class="title">Степлер</span><span class="dop"> STELGRIT (тип 53)</span></a><br>
   <DT>03 мая: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на некоторые позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
-  <DT>26 апр: <DD><a href="/catalog/cat107.shtml" title="Снижены цены на некоторые позиции"><span class="title">Лезвия для строительных ножей</span><span class="dop"></span></a><br>
-  <DT>19 апр: <DD><a href="/catalog/cat520.shtml" title="Расширен ассортимент"><span class="title">Валики сменные Нейлон</span><span class="dop"> ProLine</span></a><br>
-  <DT>12 апр: <DD><a href="/catalog/cat183.shtml" title="Расширен ассортимент"><span class="title">Щетки для УШМ</span><span class="dop"> торцевые</span></a><br>
-  <DT>12 апр: <DD><a href="/catalog/cat516.shtml" title="Новый товар"><span class="title">Кювета для валиков</span><span class="dop"> 270х290мм</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
