--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,6 +1,10 @@
 <div id=n>
   <h2>Новинки</h2><DL>
   <DT>29 апр: <DD><a href="/catalog/cat28.shtml"  title="ЗНАЧИТЕЛЬНО снижены цены на некоторые позиции"><span class="title">Алмазные диски</span><span class="dop"> HAGWERT</span></a><br>
+  <DT>26 апр: <DD><a href="/catalog/cat107.shtml" title="Снижены цены на некоторые позиции"><span class="title">Лезвия для строительных ножей</span><span class="dop"></span></a><br>
+  <DT>19 апр: <DD><a href="/catalog/cat520.shtml" title="Расширен ассортимент"><span class="title">Валики сменные Нейлон</span><span class="dop"> ProLine</span></a><br>
+  <DT>12 апр: <DD><a href="/catalog/cat183.shtml" title="Расширен ассортимент"><span class="title">Щетки для УШМ</span><span class="dop"> торцевые</span></a><br>
+  <DT>12 апр: <DD><a href="/catalog/cat516.shtml" title="Новый товар"><span class="title">Кювета для валиков</span><span class="dop"> 270х290мм</span></a><br>
   <DT>27 мар: <DD><a href="/catalog/cat72.shtml"  title="Цена ЗНАЧИТЕЛЬНО снижена"><span class="title">Рулетка</span><span class="dop"> EFFECTA "Basic" 5 м</span></a><br>
   <DT>25 мар: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Ножи с выдвижным лезвием</span><span class="dop"></span></a><br>
   <DT>18 мар: <DD><a href="/catalog/cat512.shtml" title="Новые товары"><span class="title">Мастерки (кельмы) угловые</span><span class="dop"></span></a><br>
