--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>01 июл: <DD><a href="/catalog/cat107.shtml" title="Новые товары"><span class="title">Нож 18 мм</span><span class="dop">, алюмин. корпус</span></a><br>
   <DT>24 июн: <DD><a href="/catalog/cat77.shtml"  title="Расширен ассортимент"><span class="title">Наборы свёрел по металлу</span><span class="dop"></span></a><br>
   <DT>21 июн: <DD><a href="/catalog/cat472.shtml" title="Новые товары"><span class="title">Хомуты сантехнические</span><span class="dop"></span></a><br>
   <DT>20 июн: <DD><a href="/catalog/cat33.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гайки</span><span class="dop"> ГОСТ 5915-70</span></a><br>
