--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>02 июл: <DD><a href="/catalog/cat302.shtml" title="Новый товар"><span class="title">Бучарда SDS Max</span><span class="dop"> 40х40х250мм</span></a><br>
   <DT>01 июл: <DD><a href="/catalog/cat107.shtml" title="Новые товары"><span class="title">Нож 18 мм</span><span class="dop">, алюмин. корпус</span></a><br>
   <DT>24 июн: <DD><a href="/catalog/cat77.shtml"  title="Расширен ассортимент"><span class="title">Наборы свёрел по металлу</span><span class="dop"></span></a><br>
   <DT>21 июн: <DD><a href="/catalog/cat472.shtml" title="Новые товары"><span class="title">Хомуты сантехнические</span><span class="dop"></span></a><br>
@@ -14,7 +15,6 @@
   <DT>15 мая: <DD><a href="/catalog/cat49.shtml"  title="Расширен ассортимент"><span class="title">Зубила</span></a> и <a href="/catalog/cat211.shtml"  title="Цены снижены на некоторые позиции"><span class="title">Пики</span></a> <a href="/catalog/cat310.shtml"  title="Перфоратор SDS на нашем сайте"><span class="dop"><span style="font-size: smaller">к перфоратору </span>SDS</span></a><br>
   <DT>15 мая: <DD><a href="/catalog/cat324.shtml" title="Снижены цены на некоторые позиции"><span class="title">Биты</span></a> <a href="/catalog/cat329.shtml"  title="Снижены цены на некоторые позиции"><span class="dop">PHILLIPS</span></a> и <a href="/catalog/cat328.shtml"  title="Снижены цены на некоторые позиции и расширен ассортимент"><span class="dop">POSIDRIV</span></a><br>
   <DT>14 мая: <DD><a href="/catalog/cat188.shtml" title="Цена снижена"><span class="title">Степлер</span><span class="dop"> STELGRIT (тип 53)</span></a><br>
-  <DT>03 мая: <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на некоторые позиции"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
