--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>12 авг : <DD><a href="/catalog/cat264.shtml" title="Новый товар: Маска сварщика WH ХАРЛЕЙ с автоматическим светофильтром WH510S, за время менее 30 мкс ослабляющим световой поток на 9-13 ед. DIN (стандарт EN 169), что соответствует затемнению С4-С8 по ОСТ 21-6-87"><span class="title">Маска сварщика</span><span class="dop" style="font-size: smaller"> WH ХАРЛЕЙ с АСФ</span></a><br>
   <DT>02 июл: <DD><a href="/catalog/cat302.shtml" title="Новый товар"><span class="title">Бучарда SDS Max</span><span class="dop"> 40х40х250мм</span></a><br>
   <DT>01 июл: <DD><a href="/catalog/cat107.shtml" title="Новые товары"><span class="title">Нож 18 мм</span><span class="dop">, алюмин. корпус</span></a><br>
   <DT>24 июн: <DD><a href="/catalog/cat77.shtml"  title="Расширен ассортимент"><span class="title">Наборы свёрел по металлу</span><span class="dop"></span></a><br>
@@ -7,14 +8,6 @@
   <DT>20 июн: <DD><a href="/catalog/cat33.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гайки</span><span class="dop"> ГОСТ 5915-70</span></a><br>
   <DT>10 июн: <DD><a href="/catalog/cat446.shtml" title="Новые товары"><span class="title">Смазка универсальная</span><span class="dop"> WD40</span></a><br>
   <DT>07 июн: <DD><a href="/catalog/cat403.shtml" title="Новый товар"><span class="title">Проволока вязальная</span><span class="dop"></span></a><br>
-  <DT>27 мая: <DD><a href="/catalog/cat306.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Растворитель Р-646, Уайт-спирит</span><span class="dop"></span></a><br>
-  <DT>21 мая: <DD><a href="/catalog/cat295.shtml" title="Новые товары"><span class="title">Аэрозольная эмаль <span style="font-size: smaller">универсальная</span></span><span class="dop"></span></a><br>
-  <DT>20 мая: <DD><a href="/catalog/cat28.shtml"  title="ЗНАЧИТЕЛЬНО снижены цены на некоторые позиции"><span class="title">Алмазные диски</span><span class="dop"> HAGWERT</span></a><br>
-  <DT>17 мая: <DD><a href="/catalog/cat304.shtml" title="ЗНАЧИТЕЛЬНО расширен ассортимент"><span class="title">Эмаль</span><span class="dop"> ПФ-115</span></a><br>
-  <DT>16 мая: <DD><a href="/catalog/cat420.shtml" title="Расширен ассортимент"><span class="title">Коронки алмазные по керамике</span><span class="dop"></span></a><br>
-  <DT>15 мая: <DD><a href="/catalog/cat49.shtml"  title="Расширен ассортимент"><span class="title">Зубила</span></a> и <a href="/catalog/cat211.shtml"  title="Цены снижены на некоторые позиции"><span class="title">Пики</span></a> <a href="/catalog/cat310.shtml"  title="Перфоратор SDS на нашем сайте"><span class="dop"><span style="font-size: smaller">к перфоратору </span>SDS</span></a><br>
-  <DT>15 мая: <DD><a href="/catalog/cat324.shtml" title="Снижены цены на некоторые позиции"><span class="title">Биты</span></a> <a href="/catalog/cat329.shtml"  title="Снижены цены на некоторые позиции"><span class="dop">PHILLIPS</span></a> и <a href="/catalog/cat328.shtml"  title="Снижены цены на некоторые позиции и расширен ассортимент"><span class="dop">POSIDRIV</span></a><br>
-  <DT>14 мая: <DD><a href="/catalog/cat188.shtml" title="Цена снижена"><span class="title">Степлер</span><span class="dop"> STELGRIT (тип 53)</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
