--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>13 авг : <DD><a href="/catalog/cat18.shtml"  title="Саморезы по дереву, гипсокартону и тонкому металлу: Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Саморезы</span><span class="dop" style="font-size: smaller"></span></a><br>
   <DT>12 авг : <DD><a href="/catalog/cat264.shtml" title="Новый товар: Маска сварщика WH ХАРЛЕЙ с автоматическим светофильтром WH510S, за время менее 30 мкс ослабляющим световой поток на 9-13 ед. DIN (стандарт EN 169), что соответствует затемнению С4-С8 по ОСТ 21-6-87"><span class="title">Маска сварщика</span><span class="dop" style="font-size: smaller"> WH ХАРЛЕЙ с АСФ</span></a><br>
   <DT>02 июл: <DD><a href="/catalog/cat302.shtml" title="Новый товар"><span class="title">Бучарда SDS Max</span><span class="dop"> 40х40х250мм</span></a><br>
   <DT>01 июл: <DD><a href="/catalog/cat107.shtml" title="Новые товары"><span class="title">Нож 18 мм</span><span class="dop">, алюмин. корпус</span></a><br>
