--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>26 авг : <DD><a href="/catalog/cat69.shtml"  title="Расширен ассортимент: Миксеры универсальные, шестигранный хвостовик"><span class="title">Миксеры</span><span class="dop"> (насадки на миксер)</span></a><br>
   <DT>16 авг : <DD><a href="/catalog/cat48.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Буры по бетону</span><span class="dop"> SDS Max</span></a><br>
   <DT>15 авг : <DD><a href="/catalog/cat189.shtml" title="Расширен ассортимент"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
   <DT>13 авг : <DD><a href="/catalog/cat18.shtml"  title="Саморезы по дереву, гипсокартону и тонкому металлу: Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Саморезы</span><span class="dop" style="font-size: smaller"></span></a><br>
